kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firewah
  labels:
    app: firewah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firewah
  template:
    metadata:
      labels:
        app: firewah
    spec:
      containers:
      - name: firewah
        image: gitlab.pd.o:4567/drule/firewah:8
        ports:
        - name: http
          containerPort: 3000
      imagePullSecrets:
        name: gitlab
