kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: firewah
spec:
  backend:
    serviceName: firewah
    servicePort: 3000
